src/test/deca/syntax/invalid/resultats/test43_method-synt.res
./src/test/deca/syntax/invalid/test43_method.deca:18:7: mismatched input 'i' expecting {STRING, MULTI_LINE_STRING}
